# jsonrpc-to-firestark

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
.github/workflows/docker/: Dockerfile.arm64  Dockerfile.arm64.dockerignore
src/: main.rs
