[package]
name = "jsonrpc-to-firestark"
version = "0.4.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Extract logs expected by firestark from a trusted JSON-RPC source"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive", "env"] }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
serde = "1.0.180"
serde_json = "1.0.104"
serde_with = "2.3.2"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "6cadb198644cf5e942187896c2e6bb3ecc9edc6e" }
tokio = { version = "1.29.1", features = ["full"] }
url = "2.4.0"
